Add prototype of a TLA+ debugger based on Microsoft's debug-adapter-protocol. Most of this code has been copied from https://github.com/Microsoft/vscode-mock-debug

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "Programming Languages",
         "Snippets",
         "Formatters",
-        "Other"
+        "Other",
+        "Debuggers"
     ],
     "repository": {
         "type": "git",
@@ -50,6 +51,17 @@
         "tools"
     ],
     "contributes": {
+        "debuggers": [
+            {
+                "type": "tlaplus",
+                "label": "TLA+ Debug"
+            }
+        ],
+        "breakpoints": [
+            {
+                "language": "tlaplus"
+            }
+        ],
         "languages": [
             {
                 "id": "tlaplus",
@@ -164,6 +176,13 @@
                 "command": "tlaplus.evaluateExpression",
                 "title": "Evaluate expression...",
                 "category": "TLA+"
+            },
+            {
+                "command": "tlaplus.debug.debugEditorContents",
+                "title": "Debug...",
+                "enablement": "!inDebugMode",
+                "icon": "$(debug-alt)",
+                "category": "TLA+"
             }
         ],
         "snippets": [
@@ -219,6 +238,10 @@
                 {
                     "command": "tlaplus.evaluateExpression",
                     "when": "editorLangId == tlaplus"
+                },
+                {
+                    "command": "tlaplus.debug.debugEditorContents",
+                    "when": "editorLangId == tlaplus"
                 }
             ],
             "explorer/context": [
@@ -243,6 +266,18 @@
                     "command": "tlaplus.evaluateSelection",
                     "when": "editorLangId == tlaplus",
                     "group": "z_commands"
+                },
+                {
+                    "command": "tlaplus.debug.debugEditorContents",
+                    "when": "editorLangId == tlaplus",
+                    "group": "z_commands"
+                }
+            ],
+            "editor/title": [
+                {
+                    "command": "tlaplus.debug.debugEditorContents",
+                    "when": "resourceLangId == tlaplus",
+                    "group": "1_run@20"
                 }
             ]
         },
@@ -345,9 +380,12 @@
         "node": "^12.12.0",
         "source-map-support": "^0.5.16",
         "typescript": "^3.7.5",
-        "vscode-test": "^1.3.0"
+        "vscode-test": "^1.3.0",
+        "vscode-debugadapter-testsupport": "^1.42.0"
     },
     "dependencies": {
-        "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "await-notify": "1.0.1",
+        "vscode-debugadapter": "^1.42.1"
     }
 }
