--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y%m%d%H%M')"
+    - name: Get current version
+      id: version
+      run: echo "::set-output name=version::$(jq -r .version package.json)"
     - name: Install dependencies
       run: |
         npm install
@@ -47,8 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: vscode-tlaplus-1.5.2.vsix
-        asset_name: vscode-tlaplus-1.5.2.vsix
+        asset_path: vscode-tlaplus-${{steps.version.outputs.version}}.vsix
+        asset_name: vscode-tlaplus-${{steps.version.outputs.version}}.vsix
         asset_content_type: application/zip
         
         
