--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest]
+        os: [macOS-latest, ubuntu-18.04, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
@@ -18,6 +18,11 @@ jobs:
     - name: Build
       run: npm run vscode:prepublish
     - name: Check
-      run: |
-        npm run lint
-        npm test --silent
+      env:
+          DISPLAY: 10
+          INSTALL_JUPYTER_EXTENSION: true
+      uses: GabrielBB/xvfb-action@v1.4
+      with:
+        run: |
+          npm run lint
+          npm test --silent
