--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Get current version
       id: version
       run: echo "::set-output name=version::$(jq -r .version package.json)"
+    - name: Patch up version number
+      id: pre-release-version-hack
+      run: |
+        sed -i '' 's/^\(version:\).*/\1 '"${{ steps.version.outputs.version }}-${{ github.event.inputs.suffix }}"'/' package.json
     - name: Install dependencies
       run: |
         npm install
